--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ packaging==24.2
 pillow==11.2.1
 pydantic==2.11.3
 pydantic_core==2.33.1
+python-dotenv==1.1.0
 pytz==2025.2
 PyYAML==6.0.2
 setuptools==75.8.0
@@ -30,3 +31,4 @@ tzdata==2025.2
 uritemplate==4.1.1
 uvicorn==0.34.1
 wheel==0.45.1
+
